src/RSTT/Syntax/Par.info
-----------------------------------------------------------------------------
Info file generated by Happy Version 1.20.0 from RSTT/Syntax/Par.y
-----------------------------------------------------------------------------


-----------------------------------------------------------------------------
Grammar
-----------------------------------------------------------------------------
	%start_pProgram -> Program                         (0)
	%start_pDecl -> Decl                               (1)
	%start_pListDecl -> ListDecl                       (2)
	%start_pShape -> Shape                             (3)
	%start_pPointPattern -> PointPattern               (4)
	%start_pPointConDecl -> PointConDecl               (5)
	%start_pListPointConDecl -> ListPointConDecl       (6)
	%start_pCube -> Cube                               (7)
	%start_pCube1 -> Cube1                             (8)
	%start_pListCube -> ListCube                       (9)
	%start_pTopeRule -> TopeRule                       (10)
	%start_pListTopeRule -> ListTopeRule               (11)
	%start_pRuleName -> RuleName                       (12)
	%start_pSequent -> Sequent                         (13)
	%start_pListSequent -> ListSequent                 (14)
	%start_pCubeContext -> CubeContext                 (15)
	%start_pPointDecl -> PointDecl                     (16)
	%start_pListPointDecl -> ListPointDecl             (17)
	%start_pTopeContext -> TopeContext                 (18)
	%start_pTope -> Tope                               (19)
	%start_pTope1 -> Tope1                             (20)
	%start_pTope2 -> Tope2                             (21)
	%start_pTope3 -> Tope3                             (22)
	%start_pListTope -> ListTope                       (23)
	%start_pPoint -> Point                             (24)
	%start_pListPoint -> ListPoint                     (25)
	String -> L_quoted                                 (26)
	Label -> L_Label                                   (27)
	Var -> L_Var                                       (28)
	Line -> L_Line                                     (29)
	Program -> ListDecl                                (30)
	Decl -> 'cube' Label 'with' '{' ListPointConDecl '}'   (31)
	Decl -> 'tope' Label '(' ListCube ')' 'with' '{' ListTopeRule '}'   (32)
	Decl -> 'shape' Var ':=' Shape                     (33)
	Decl -> 'prove' '{' Sequent '}'                    (34)
	ListDecl ->                                        (35)
	ListDecl -> Decl                                   (36)
	ListDecl -> Decl ';' ListDecl                      (37)
	Shape -> '{' PointPattern ':' Cube '|' Tope '}'    (38)
	PointPattern -> Var                                (39)
	PointPattern -> '⟨' PointPattern ',' PointPattern '⟩'   (40)
	PointConDecl -> 'point' Label                      (41)
	PointConDecl -> 'point' Label '(' ListCube ')'     (42)
	ListPointConDecl ->                                (43)
	ListPointConDecl -> PointConDecl                   (44)
	ListPointConDecl -> PointConDecl ';' ListPointConDecl   (45)
	Cube -> Cube '×' Cube1                             (46)
	Cube -> Cube1                                      (47)
	Cube1 -> '𝟙'                                       (48)
	Cube1 -> Label                                     (49)
	Cube1 -> Var                                       (50)
	Cube1 -> '(' Cube ')'                              (51)
	ListCube -> Cube                                   (52)
	ListCube -> Cube ',' ListCube                      (53)
	TopeRule -> 'rule' RuleName 'where' '{' ListSequent Line ';' Sequent '}'   (54)
	ListTopeRule ->                                    (55)
	ListTopeRule -> TopeRule                           (56)
	ListTopeRule -> TopeRule ';' ListTopeRule          (57)
	RuleName -> String                                 (58)
	Sequent -> CubeContext '|' TopeContext '⊢' Tope    (59)
	ListSequent ->                                     (60)
	ListSequent -> Sequent                             (61)
	ListSequent -> Sequent ';' ListSequent             (62)
	CubeContext -> '⋅'                                 (63)
	CubeContext -> ListPointDecl                       (64)
	PointDecl -> Var ':' Cube                          (65)
	ListPointDecl -> PointDecl                         (66)
	ListPointDecl -> PointDecl ',' ListPointDecl       (67)
	TopeContext -> '⋅'                                 (68)
	TopeContext -> ListTope                            (69)
	Tope -> '⊤'                                        (70)
	Tope -> '⊥'                                        (71)
	Tope -> Tope '⇒' Tope1                             (72)
	Tope -> Tope1                                      (73)
	Tope1 -> Tope1 '∨' Tope2                           (74)
	Tope1 -> Tope2                                     (75)
	Tope2 -> Tope2 '∧' Tope3                           (76)
	Tope2 -> Tope3                                     (77)
	Tope3 -> Point '≡' Point                           (78)
	Tope3 -> Label '(' ListPoint ')'                   (79)
	Tope3 -> Var                                       (80)
	Tope3 -> '(' Tope ')'                              (81)
	ListTope -> Tope                                   (82)
	ListTope -> Tope ',' ListTope                      (83)
	Point -> '⋆'                                       (84)
	Point -> '⟨' Point ',' Point '⟩'                   (85)
	Point -> '𝜋₁' '(' Point ')'                        (86)
	Point -> '𝜋₂' '(' Point ')'                        (87)
	Point -> Label '(' ListPoint ')'                   (88)
	Point -> Label                                     (89)
	Point -> Var                                       (90)
	ListPoint -> Point                                 (91)
	ListPoint -> Point ',' ListPoint                   (92)

-----------------------------------------------------------------------------
Terminals
-----------------------------------------------------------------------------
	'('            { PT _ (TS _ 1) }
	')'            { PT _ (TS _ 2) }
	','            { PT _ (TS _ 3) }
	':'            { PT _ (TS _ 4) }
	':='           { PT _ (TS _ 5) }
	';'            { PT _ (TS _ 6) }
	'cube'         { PT _ (TS _ 7) }
	'point'        { PT _ (TS _ 8) }
	'prove'        { PT _ (TS _ 9) }
	'rule'         { PT _ (TS _ 10) }
	'shape'        { PT _ (TS _ 11) }
	'tope'         { PT _ (TS _ 12) }
	'where'        { PT _ (TS _ 13) }
	'with'         { PT _ (TS _ 14) }
	'{'            { PT _ (TS _ 15) }
	'|'            { PT _ (TS _ 16) }
	'}'            { PT _ (TS _ 17) }
	'×'            { PT _ (TS _ 18) }
	'⇒'            { PT _ (TS _ 19) }
	'∧'            { PT _ (TS _ 20) }
	'∨'            { PT _ (TS _ 21) }
	'≡'            { PT _ (TS _ 22) }
	'⊢'            { PT _ (TS _ 23) }
	'⊤'            { PT _ (TS _ 24) }
	'⊥'            { PT _ (TS _ 25) }
	'⋅'            { PT _ (TS _ 26) }
	'⋆'            { PT _ (TS _ 27) }
	'⟨'            { PT _ (TS _ 28) }
	'⟩'            { PT _ (TS _ 29) }
	'𝜋₁'           { PT _ (TS _ 30) }
	'𝜋₂'           { PT _ (TS _ 31) }
	'𝟙'            { PT _ (TS _ 32) }
	L_quoted       { PT _ (TL $$) }
	L_Label        { PT _ (T_Label $$) }
	L_Var          { PT _ (T_Var $$) }
	L_Line         { PT _ (T_Line $$) }

-----------------------------------------------------------------------------
Non-terminals
-----------------------------------------------------------------------------
	%start_pProgram rule  0
	%start_pDecl    rule  1
	%start_pListDecl rule  2
	%start_pShape   rule  3
	%start_pPointPattern rule  4
	%start_pPointConDecl rule  5
	%start_pListPointConDecl rule  6
	%start_pCube    rule  7
	%start_pCube1   rule  8
	%start_pListCube rule  9
	%start_pTopeRule rule  10
	%start_pListTopeRule rule  11
	%start_pRuleName rule  12
	%start_pSequent rule  13
	%start_pListSequent rule  14
	%start_pCubeContext rule  15
	%start_pPointDecl rule  16
	%start_pListPointDecl rule  17
	%start_pTopeContext rule  18
	%start_pTope    rule  19
	%start_pTope1   rule  20
	%start_pTope2   rule  21
	%start_pTope3   rule  22
	%start_pListTope rule  23
	%start_pPoint   rule  24
	%start_pListPoint rule  25
	String          rule  26
	Label           rule  27
	Var             rule  28
	Line            rule  29
	Program         rule  30
	Decl            rules 31, 32, 33, 34
	ListDecl        rules 35, 36, 37
	Shape           rule  38
	PointPattern    rules 39, 40
	PointConDecl    rules 41, 42
	ListPointConDecl rules 43, 44, 45
	Cube            rules 46, 47
	Cube1           rules 48, 49, 50, 51
	ListCube        rules 52, 53
	TopeRule        rule  54
	ListTopeRule    rules 55, 56, 57
	RuleName        rule  58
	Sequent         rule  59
	ListSequent     rules 60, 61, 62
	CubeContext     rules 63, 64
	PointDecl       rule  65
	ListPointDecl   rules 66, 67
	TopeContext     rules 68, 69
	Tope            rules 70, 71, 72, 73
	Tope1           rules 74, 75
	Tope2           rules 76, 77
	Tope3           rules 78, 79, 80, 81
	ListTope        rules 82, 83
	Point           rules 84, 85, 86, 87, 88, 89, 90
	ListPoint       rules 91, 92

-----------------------------------------------------------------------------
States
-----------------------------------------------------------------------------
State 0

	%start_pProgram -> . Program                        (rule 0)

	'cube'         shift, and enter state 94
	'prove'        shift, and enter state 95
	'shape'        shift, and enter state 96
	'tope'         shift, and enter state 97
	%eof           reduce using rule 35

	Program        goto state 99
	Decl           goto state 92
	ListDecl       goto state 100

State 1

	%start_pDecl -> . Decl                              (rule 1)

	'cube'         shift, and enter state 94
	'prove'        shift, and enter state 95
	'shape'        shift, and enter state 96
	'tope'         shift, and enter state 97

	Decl           goto state 98

State 2

	%start_pListDecl -> . ListDecl                      (rule 2)

	'cube'         shift, and enter state 94
	'prove'        shift, and enter state 95
	'shape'        shift, and enter state 96
	'tope'         shift, and enter state 97
	%eof           reduce using rule 35

	Decl           goto state 92
	ListDecl       goto state 93

State 3

	%start_pShape -> . Shape                            (rule 3)

	'{'            shift, and enter state 91

	Shape          goto state 90

State 4

	%start_pPointPattern -> . PointPattern              (rule 4)

	'⟨'            shift, and enter state 89
	L_Var          shift, and enter state 37

	Var            goto state 87
	PointPattern   goto state 88

State 5

	%start_pPointConDecl -> . PointConDecl              (rule 5)

	'point'        shift, and enter state 85

	PointConDecl   goto state 86

State 6

	%start_pListPointConDecl -> . ListPointConDecl      (rule 6)

	'point'        shift, and enter state 85
	%eof           reduce using rule 43

	PointConDecl   goto state 83
	ListPointConDeclgoto state 84

State 7

	%start_pCube -> . Cube                              (rule 7)

	'('            shift, and enter state 79
	'𝟙'            shift, and enter state 80
	L_Label        shift, and enter state 36
	L_Var          shift, and enter state 37

	Label          goto state 74
	Var            goto state 75
	Cube           goto state 82
	Cube1          goto state 77

State 8

	%start_pCube1 -> . Cube1                            (rule 8)

	'('            shift, and enter state 79
	'𝟙'            shift, and enter state 80
	L_Label        shift, and enter state 36
	L_Var          shift, and enter state 37

	Label          goto state 74
	Var            goto state 75
	Cube1          goto state 81

State 9

	%start_pListCube -> . ListCube                      (rule 9)

	'('            shift, and enter state 79
	'𝟙'            shift, and enter state 80
	L_Label        shift, and enter state 36
	L_Var          shift, and enter state 37

	Label          goto state 74
	Var            goto state 75
	Cube           goto state 76
	Cube1          goto state 77
	ListCube       goto state 78

State 10

	%start_pTopeRule -> . TopeRule                      (rule 10)

	'rule'         shift, and enter state 72

	TopeRule       goto state 73

State 11

	%start_pListTopeRule -> . ListTopeRule              (rule 11)

	'rule'         shift, and enter state 72
	%eof           reduce using rule 55

	TopeRule       goto state 70
	ListTopeRule   goto state 71

State 12

	%start_pRuleName -> . RuleName                      (rule 12)

	L_quoted       shift, and enter state 27

	String         goto state 68
	RuleName       goto state 69

State 13

	%start_pSequent -> . Sequent                        (rule 13)

	'⋅'            shift, and enter state 63
	L_Var          shift, and enter state 37

	Var            goto state 57
	Sequent        goto state 67
	CubeContext    goto state 66
	PointDecl      goto state 58
	ListPointDecl  goto state 62

State 14

	%start_pListSequent -> . ListSequent                (rule 14)

	'⋅'            shift, and enter state 63
	L_Var          shift, and enter state 37
	%eof           reduce using rule 60

	Var            goto state 57
	Sequent        goto state 64
	ListSequent    goto state 65
	CubeContext    goto state 66
	PointDecl      goto state 58
	ListPointDecl  goto state 62

State 15

	%start_pCubeContext -> . CubeContext                (rule 15)

	'⋅'            shift, and enter state 63
	L_Var          shift, and enter state 37

	Var            goto state 57
	CubeContext    goto state 61
	PointDecl      goto state 58
	ListPointDecl  goto state 62

State 16

	%start_pPointDecl -> . PointDecl                    (rule 16)

	L_Var          shift, and enter state 37

	Var            goto state 57
	PointDecl      goto state 60

State 17

	%start_pListPointDecl -> . ListPointDecl            (rule 17)

	L_Var          shift, and enter state 37

	Var            goto state 57
	PointDecl      goto state 58
	ListPointDecl  goto state 59

State 18

	%start_pTopeContext -> . TopeContext                (rule 18)

	'('            shift, and enter state 47
	'⊤'            shift, and enter state 48
	'⊥'            shift, and enter state 49
	'⋅'            shift, and enter state 56
	'⋆'            shift, and enter state 32
	'⟨'            shift, and enter state 33
	'𝜋₁'           shift, and enter state 34
	'𝜋₂'           shift, and enter state 35
	L_Label        shift, and enter state 36
	L_Var          shift, and enter state 37

	Label          goto state 39
	Var            goto state 40
	TopeContext    goto state 54
	Tope           goto state 41
	Tope1          goto state 42
	Tope2          goto state 43
	Tope3          goto state 44
	ListTope       goto state 55
	Point          goto state 46

State 19

	%start_pTope -> . Tope                              (rule 19)

	'('            shift, and enter state 47
	'⊤'            shift, and enter state 48
	'⊥'            shift, and enter state 49
	'⋆'            shift, and enter state 32
	'⟨'            shift, and enter state 33
	'𝜋₁'           shift, and enter state 34
	'𝜋₂'           shift, and enter state 35
	L_Label        shift, and enter state 36
	L_Var          shift, and enter state 37

	Label          goto state 39
	Var            goto state 40
	Tope           goto state 53
	Tope1          goto state 42
	Tope2          goto state 43
	Tope3          goto state 44
	Point          goto state 46

State 20

	%start_pTope1 -> . Tope1                            (rule 20)

	'('            shift, and enter state 47
	'⋆'            shift, and enter state 32
	'⟨'            shift, and enter state 33
	'𝜋₁'           shift, and enter state 34
	'𝜋₂'           shift, and enter state 35
	L_Label        shift, and enter state 36
	L_Var          shift, and enter state 37

	Label          goto state 39
	Var            goto state 40
	Tope1          goto state 52
	Tope2          goto state 43
	Tope3          goto state 44
	Point          goto state 46

State 21

	%start_pTope2 -> . Tope2                            (rule 21)

	'('            shift, and enter state 47
	'⋆'            shift, and enter state 32
	'⟨'            shift, and enter state 33
	'𝜋₁'           shift, and enter state 34
	'𝜋₂'           shift, and enter state 35
	L_Label        shift, and enter state 36
	L_Var          shift, and enter state 37

	Label          goto state 39
	Var            goto state 40
	Tope2          goto state 51
	Tope3          goto state 44
	Point          goto state 46

State 22

	%start_pTope3 -> . Tope3                            (rule 22)

	'('            shift, and enter state 47
	'⋆'            shift, and enter state 32
	'⟨'            shift, and enter state 33
	'𝜋₁'           shift, and enter state 34
	'𝜋₂'           shift, and enter state 35
	L_Label        shift, and enter state 36
	L_Var          shift, and enter state 37

	Label          goto state 39
	Var            goto state 40
	Tope3          goto state 50
	Point          goto state 46

State 23

	%start_pListTope -> . ListTope                      (rule 23)

	'('            shift, and enter state 47
	'⊤'            shift, and enter state 48
	'⊥'            shift, and enter state 49
	'⋆'            shift, and enter state 32
	'⟨'            shift, and enter state 33
	'𝜋₁'           shift, and enter state 34
	'𝜋₂'           shift, and enter state 35
	L_Label        shift, and enter state 36
	L_Var          shift, and enter state 37

	Label          goto state 39
	Var            goto state 40
	Tope           goto state 41
	Tope1          goto state 42
	Tope2          goto state 43
	Tope3          goto state 44
	ListTope       goto state 45
	Point          goto state 46

State 24

	%start_pPoint -> . Point                            (rule 24)

	'⋆'            shift, and enter state 32
	'⟨'            shift, and enter state 33
	'𝜋₁'           shift, and enter state 34
	'𝜋₂'           shift, and enter state 35
	L_Label        shift, and enter state 36
	L_Var          shift, and enter state 37

	Label          goto state 28
	Var            goto state 29
	Point          goto state 38

State 25

	%start_pListPoint -> . ListPoint                    (rule 25)

	'⋆'            shift, and enter state 32
	'⟨'            shift, and enter state 33
	'𝜋₁'           shift, and enter state 34
	'𝜋₂'           shift, and enter state 35
	L_Label        shift, and enter state 36
	L_Var          shift, and enter state 37

	Label          goto state 28
	Var            goto state 29
	Point          goto state 30
	ListPoint      goto state 31

State 26

	String -> . L_quoted                                (rule 26)

	L_quoted       shift, and enter state 27


State 27

	String -> L_quoted .                                (rule 26)

	'where'        reduce using rule 26
	%eof           reduce using rule 26


State 28

	Point -> Label . '(' ListPoint ')'                  (rule 88)
	Point -> Label .                                    (rule 89)

	'('            shift, and enter state 130
	')'            reduce using rule 89
	','            reduce using rule 89
	';'            reduce using rule 89
	'}'            reduce using rule 89
	'⇒'            reduce using rule 89
	'∧'            reduce using rule 89
	'∨'            reduce using rule 89
	'⊢'            reduce using rule 89
	'⟩'            reduce using rule 89
	L_Line         reduce using rule 89
	%eof           reduce using rule 89


State 29

	Point -> Var .                                      (rule 90)

	')'            reduce using rule 90
	','            reduce using rule 90
	';'            reduce using rule 90
	'}'            reduce using rule 90
	'⇒'            reduce using rule 90
	'∧'            reduce using rule 90
	'∨'            reduce using rule 90
	'⊢'            reduce using rule 90
	'⟩'            reduce using rule 90
	L_Line         reduce using rule 90
	%eof           reduce using rule 90


State 30

	ListPoint -> Point .                                (rule 91)
	ListPoint -> Point . ',' ListPoint                  (rule 92)

	')'            reduce using rule 91
	','            shift, and enter state 129
	%eof           reduce using rule 91


State 31

	%start_pListPoint -> ListPoint .                    (rule 25)

	%eof           accept


State 32

	Point -> '⋆' .                                      (rule 84)

	')'            reduce using rule 84
	','            reduce using rule 84
	';'            reduce using rule 84
	'}'            reduce using rule 84
	'⇒'            reduce using rule 84
	'∧'            reduce using rule 84
	'∨'            reduce using rule 84
	'≡'            reduce using rule 84
	'⊢'            reduce using rule 84
	'⟩'            reduce using rule 84
	L_Line         reduce using rule 84
	%eof           reduce using rule 84


State 33

	Point -> '⟨' . Point ',' Point '⟩'                  (rule 85)

	'⋆'            shift, and enter state 32
	'⟨'            shift, and enter state 33
	'𝜋₁'           shift, and enter state 34
	'𝜋₂'           shift, and enter state 35
	L_Label        shift, and enter state 36
	L_Var          shift, and enter state 37

	Label          goto state 28
	Var            goto state 29
	Point          goto state 128

State 34

	Point -> '𝜋₁' . '(' Point ')'                       (rule 86)

	'('            shift, and enter state 127


State 35

	Point -> '𝜋₂' . '(' Point ')'                       (rule 87)

	'('            shift, and enter state 126


State 36

	Label -> L_Label .                                  (rule 27)

	'('            reduce using rule 27
	')'            reduce using rule 27
	','            reduce using rule 27
	';'            reduce using rule 27
	'with'         reduce using rule 27
	'|'            reduce using rule 27
	'}'            reduce using rule 27
	'×'            reduce using rule 27
	'⇒'            reduce using rule 27
	'∧'            reduce using rule 27
	'∨'            reduce using rule 27
	'≡'            reduce using rule 27
	'⊢'            reduce using rule 27
	'⟩'            reduce using rule 27
	L_Line         reduce using rule 27
	%eof           reduce using rule 27


State 37

	Var -> L_Var .                                      (rule 28)

	')'            reduce using rule 28
	','            reduce using rule 28
	':'            reduce using rule 28
	':='           reduce using rule 28
	';'            reduce using rule 28
	'|'            reduce using rule 28
	'}'            reduce using rule 28
	'×'            reduce using rule 28
	'⇒'            reduce using rule 28
	'∧'            reduce using rule 28
	'∨'            reduce using rule 28
	'≡'            reduce using rule 28
	'⊢'            reduce using rule 28
	'⟩'            reduce using rule 28
	L_Line         reduce using rule 28
	%eof           reduce using rule 28


State 38

	%start_pPoint -> Point .                            (rule 24)

	%eof           accept


State 39

	Tope3 -> Label . '(' ListPoint ')'                  (rule 79)
	Point -> Label . '(' ListPoint ')'                  (rule 88)
	Point -> Label .                                    (rule 89)

	'('            shift, and enter state 125
	'≡'            reduce using rule 89


State 40

	Tope3 -> Var .                                      (rule 80)
	Point -> Var .                                      (rule 90)

	')'            reduce using rule 80
	','            reduce using rule 80
	';'            reduce using rule 80
	'}'            reduce using rule 80
	'⇒'            reduce using rule 80
	'∧'            reduce using rule 80
	'∨'            reduce using rule 80
	'≡'            reduce using rule 90
	'⊢'            reduce using rule 80
	L_Line         reduce using rule 80
	%eof           reduce using rule 80


State 41

	Tope -> Tope . '⇒' Tope1                            (rule 72)
	ListTope -> Tope .                                  (rule 82)
	ListTope -> Tope . ',' ListTope                     (rule 83)

	','            shift, and enter state 124
	'⇒'            shift, and enter state 119
	'⊢'            reduce using rule 82
	%eof           reduce using rule 82


State 42

	Tope -> Tope1 .                                     (rule 73)
	Tope1 -> Tope1 . '∨' Tope2                          (rule 74)

	')'            reduce using rule 73
	','            reduce using rule 73
	';'            reduce using rule 73
	'}'            reduce using rule 73
	'⇒'            reduce using rule 73
	'∨'            shift, and enter state 120
	'⊢'            reduce using rule 73
	L_Line         reduce using rule 73
	%eof           reduce using rule 73


State 43

	Tope1 -> Tope2 .                                    (rule 75)
	Tope2 -> Tope2 . '∧' Tope3                          (rule 76)

	')'            reduce using rule 75
	','            reduce using rule 75
	';'            reduce using rule 75
	'}'            reduce using rule 75
	'⇒'            reduce using rule 75
	'∧'            shift, and enter state 121
	'∨'            reduce using rule 75
	'⊢'            reduce using rule 75
	L_Line         reduce using rule 75
	%eof           reduce using rule 75


State 44

	Tope2 -> Tope3 .                                    (rule 77)

	')'            reduce using rule 77
	','            reduce using rule 77
	';'            reduce using rule 77
	'}'            reduce using rule 77
	'⇒'            reduce using rule 77
	'∧'            reduce using rule 77
	'∨'            reduce using rule 77
	'⊢'            reduce using rule 77
	L_Line         reduce using rule 77
	%eof           reduce using rule 77


State 45

	%start_pListTope -> ListTope .                      (rule 23)

	%eof           accept


State 46

	Tope3 -> Point . '≡' Point                          (rule 78)

	'≡'            shift, and enter state 123


State 47

	Tope3 -> '(' . Tope ')'                             (rule 81)
